--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,38 +1,58 @@
 ---
 interface Props {
-	title: string;
-	body: string;
-	image: string;
+  title: string;
+  body: string;
+  image?: string; // Propiedad opcional
 }
 
 const { image, body, title } = Astro.props;
 ---
+<div class="feature-box">
+	<div class="flex flex-col md:flex-row items-center justify-center space-y-4 md:space-y-0 md:space-x-5 flex-wrap">
 
-<div class="flex flex-col md:flex-row items-start">
-	<!-- Contenido de texto -->
-	<div class="flex flex-col justify-between text-center md:text-left mb-6 md:mb-0 md:max-w-[500px]">
-	  <h2 class="text-2xl md:text-4xl font-bold mb-4 text-gradient">
-		{title}
-	  </h2>
-	  <p class="text-sm md:text-base">
-		{body}
-	  </p>
-	</div>
-  
-	<!-- Imagen -->
-	<div class="w-[150px] h-[150px] md:w-[180px] md:h-[180px] mx-auto md:mx-0 md:ml-5">
-	  <img src={image} alt="Descripción de la imagen" class="w-full h-full object-cover rounded-lg">
+		<!-- Texto -->
+		<div class="flex flex-col items-center text-center md:text-left w-full">
+			<h2 class="text-2xl md:text-4xl mb-4 new-asterdam-font">
+				{title}
+			</h2>
+			<p class="text-center">{body}</p> <!-- Asegúrate de que el párrafo esté centrado -->
+		</div>
+
+		<!-- Imagen -->
+		{image && (
+			<div class="w-[150px] h-[150px] md:w-[180px] md:h-[180px] mt-4 md:mt-0">
+				<img src={image} alt="Descripción de la imagen" class="w-full h-full object-cover rounded-lg">
+			</div>
+		)}
 	</div>
 </div>
-  
+
 <style>
-	h2 {
-	  margin: 0;
-	  font-size: 1.25rem;
-	  transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-	p {
-	  margin-top: 0.5rem;
-	  margin-bottom: 0;
-	}
+  .feature-box {
+    background-color: #170c41; /* Cambia el color de fondo según sea necesario */
+    width: 100%; /* Ancho completo en pantallas pequeñas */
+    max-width: 270px; /* Máximo ancho en pantallas grandes */
+    height: auto; /* Altura automática para ajustarse al contenido */
+    border-radius: 20px;
+    padding: 10px;
+    margin: 0 auto; /* Centramos la caja */
+    text-align: center; /* Asegura que el texto esté centrado */
+  }
+
+  h2 {
+    margin: 0;
+    font-size: 40px;
+    transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+  }
+
+  p {
+    margin-top: 25px;
+    margin-bottom: 0;
+  }
+
+  .feature-box img {
+    max-width: 100%; /* La imagen no se sale del contenedor */
+    max-height: 100%;
+    object-fit: cover;
+  }
 </style>
