--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,51 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
+	@font-face {
+		font-family: 'NewAmsterdam';
+		src: url('/fonts/NewAmsterdam-Regular.ttf') format('truetype');
+		font-weight: normal;
+		font-style: normal;
+	}
+
+	@font-face {
+		font-family: 'SpaceGroteskM';
+		src: url('/fonts/SpaceGrotesk-Medium.ttf') format('truetype');
+		font-weight: normal;
+		font-style: normal;
+	}
+
+	@font-face {
+		font-family: 'SpaceGroteskR';
+		src: url('/fonts/SpaceGrotesk-Regular.tff') format('truetype');
+		font-weight: normal;
+		font-style: normal;
+	}
+
+	@font-face {
+		font-family: 'SpaceGroteskL';
+		src: url('/fonts/SpaceGrotesk-Ligth.tff') format('truetype');
+		font-weight: normal;
+		font-style: normal;
+	}
+
+	.mycontainer {
+		background-color: #0b0329;
+	}
+
+	.new-asterdam-font {
+  		font-family: 'NewAmsterdam', sans-serif;
+	}
+	.space-grotesk-m {
+  		font-family: 'SpaceGroteskM', sans-serif;
+	}
+	.space-grotesk-r {
+  		font-family: 'SpaceGroteskR', sans-serif;
+	}
+	.space-grotesk-r {
+  		font-family: 'SpaceGroteskL', sans-serif;
+	}
+
 	:root {
 		--accent: 136, 58, 234;
 		--accent-light: 224, 204, 250;
@@ -33,8 +78,9 @@ const { title } = Astro.props;
 		);
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
+		font-family: sans-serif;
+		--tw-bg-opacity: 1;
+		background: #06011a;
 	}
 	code {
 		font-family:
@@ -46,5 +92,9 @@ const { title } = Astro.props;
 			Bitstream Vera Sans Mono,
 			Courier New,
 			monospace;
+	}
+	body {
+		margin: 20px 20px 20px 20px;
+		font-family: SpaceGroteskM;
 	}
 </style>
